# mcp-chess

./: main.py  pyproject.toml
src/chess/: chess_api.py  server.py
